Inicio patron DTO